fix: add overflow auto to container div to sort some sections not being contained

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,6 +25,7 @@ h1, h2, h3, h4 {
     margin-left: auto;
     margin-right: auto;
     border: solid 1px #1F3333;
+    overflow: auto;
 }
 
 /* Header including navbar and logo*/
